--- a/Blank template.html
+++ b/Blank template.html
@@ -33,11 +33,11 @@ body {
 	</iframe></div>
 			
 <div align="center" style="width: 1150px; margin:0 auto" class="style4">
-<img src="./photo/cover/logo.png" style="float: left" width="163" height="32" /><br /><br />
-<img src="./photo/content/content_bus_photo.png" style="float: left" />
+<img src="./photo/cover/logo.png" style="float: left" width="163" height="32" />
 <br />
+<p><img src="./photo/content/content_bus_photo.png" style="float: left" /></p>
 <br />
-~Main Body Here~</div>
+<p>~Main Body Here~</p></div>
 
 		
 <div class="style1">
