--- a/cover.html
+++ b/cover.html
@@ -24,7 +24,10 @@ body {
 				background-color: #CCCCCC;
 }
 .style3 {
-				color: #008080;
+				text-decoration: none;
+}
+.style4 {
+				color: #000000;
 }
 -->
 </style>
@@ -41,7 +44,7 @@ index = Math.floor(Math.random() * yudan_pic.length);
 document.write('<img src="' +yudan_pic[index]+ '" alt="" />');
 // --></script></div>
 <div class="style2" style="width: 1150px; margin:0 auto">
-				|　主頁　|　大相　|　相片　|　風景　|　隨筆　|　聯絡　|　　　　　　<span class="style3"><strong>&lt;上一頁</strong></span></div>
+				|<a target="_self" href="index.html" class="style3"><span class="style4">　主頁　</span></a>|　大相　|　相片　|　風景　|　隨筆　|　聯絡　|</div>
 </body>
 
 </html>
