--- a/index.html
+++ b/index.html
@@ -23,6 +23,19 @@ body {
 .style4 {
 				background-color: #FFFFFF;
 }
+.style6 {
+				border-left: 1px solid #C0C0C0;
+				border-right-style: solid;
+				border-right-width: 1px;
+				border-top: 1px solid #C0C0C0;
+				border-bottom-style: solid;
+				border-bottom-width: 1px;
+				padding: 0px;
+				text-align: left;
+}
+.style7 {
+				border-width: 0px;
+}
 -->
 </style>
 </head>
@@ -33,11 +46,29 @@ body {
 	</iframe></div>
 			
 <div align="center" style="width: 1150px; margin:0 auto" class="style4">
-<p><img src="./photo/cover/logo.png" style="float: left" width="163" height="32" /></p>
+<img src="../km7093at249m/photo/cover/logo.png" style="float: left" width="163" height="32" />
 <br />
-<p><img src="./photo/content/content_homepage.png" style="float: left" /></p>
+<p>
+<img src="../km7093at249m/photo/content/content_homepage.png" style="float: left" /></p>
 <br />
-<p>~Main Body Here~</p></div>
+<table style="width: 100%">
+				<tr>
+								<td width="50%" class="style6" valign="top">6月大相<br />
+								<a href="photo/monthly_photo/2018/201806.jpg" onclick="window.open('photo/monthly_photo/2018/201806.jpg', 
+                         'newwindow', 
+                         'width=1152,height=768'); 
+              return false;">
+								<img src="./photo/monthly_photo/2018/201806.jpg" width="575" height="383" class="style7" /></a><br />
+								車隊編號：3AD146<br />
+								車牌：　　HS2335<br />
+								行走路線：269C<br />
+								拍攝地點：龍翷道近豐力樓</td>
+								<td width="50%" class="style6" valign="top">最近更新<br />
+								<br />
+								2018年6月3日　完成主頁建設　其他分頁將於日內開放</td>
+				</tr>
+</table>
+</div>
 
 		
 <div class="style1">
