--- a/index.html
+++ b/index.html
@@ -36,6 +36,17 @@ body {
 .style7 {
 				border-width: 0px;
 }
+.style8 {
+				border-left: 1px solid #C0C0C0;
+				border-right-style: solid;
+				border-right-width: 1px;
+				border-top: 1px solid #C0C0C0;
+				border-bottom-style: solid;
+				border-bottom-width: 1px;
+				padding: 0px;
+				text-align: left;
+				background-color: #FFFFCC;
+}
 -->
 </style>
 </head>
@@ -51,21 +62,31 @@ body {
 <p>
 <img src="../km7093at249m/photo/content/content_homepage.png" style="float: left" /></p>
 <br />
-<table style="width: 100%">
+<table style="width: 100%" cellspacing="0" cellpadding="0"><td width="50%" class="style8" valign="top">最近更新<br />
+								<br />
+								2018年6月3日　完成主頁建設　其他分頁將於日內開放</td>
+</table>
+
+<table style="width: 100%" cellspacing="0" cellpadding="0">
 				<tr>
-								<td width="50%" class="style6" valign="top">6月大相<br />
-								<a href="photo/monthly_photo/2018/201806.jpg" onclick="window.open('photo/monthly_photo/2018/201806.jpg', 
+								<td width="50%" class="style6" valign="top">
+								2018年6月大相<br />
+								<a href="photo/monthly_photo/2018/201806.jpg" onclick="window.open('./photo/monthly_photo/2018/201806.jpg', 
                          'newwindow', 
                          'width=1152,height=768'); 
               return false;">
-								<img src="./photo/monthly_photo/2018/201806.jpg" width="575" height="383" class="style7" /></a><br />
+								<img src="./photo/monthly_photo/2018/201806.jpg" width="572" height="380" class="style7" /></a><br />
 								車隊編號：3AD146<br />
 								車牌：　　HS2335<br />
 								行走路線：269C<br />
 								拍攝地點：龍翷道近豐力樓</td>
-								<td width="50%" class="style6" valign="top">最近更新<br />
-								<br />
-								2018年6月3日　完成主頁建設　其他分頁將於日內開放</td>
+								<td width="50%" class="style6" valign="top">隨攝<br />
+								<a href="./photo/featured_photo/2018/f201806.jpg" onclick="window.open('./photo/featured_photo/2018/f201806.jpg', 
+                         'newwindow', 
+                         'width=1152,height=768'); 
+              return false;">
+								<img src="./photo/featured_photo/2018/f201806.jpg" width="572" height="380" class="style7" /></a><br />
+								拍攝地點：澳洲 柏斯</td>
 				</tr>
 </table>
 </div>
