--- a/cover.html
+++ b/cover.html
@@ -34,7 +34,7 @@ body {
 </head>
 
 <body style="background-color: #C4E1FF">
-<div class="style1"><script type="text/javascript"><!-- 
+<div class="style1" style="height: 200px; margin:0 auto"><script type="text/javascript"><!-- 
 yudan_pic = new Array(4);
 yudan_pic[0] = "./photo/cover/C01.JPG";
 yudan_pic[1] = "./photo/cover/C02.JPG";
